--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="text_primary_dark">#de000000</color> <!-- 87% -->
+    <color name="text_secondary_dark">#8a000000</color>
+    <color name="colorPrimary">#144568</color>
+    <color name="colorPrimaryDark">#0a2233</color>
+    <color name="colorAccent">#2b90d9</color>
+    <color name="toolbarIconTint">#FFFFFF</color>
+
+    <color name="text_error">#F4511E</color>
+
+    <color name="ripple_light">#99ffffff</color>
+    <color name="ripple_dark">@color/mid_grey</color>
+
+    <color name="divider_color">#C0000000</color>
+
+    <color name="mid_grey">#40808080</color>
+    <color name="grey">#808080</color>
+
+    <color name="background_light">#FEFEFE</color>
+    <color name="background_lightish">#ffeeeeee</color> <!-- grey 200 -->
+    <color name="background_dark">#ff333333</color>
+    <color name="background_mastodon">#ff282c37</color>
+    <color name="background_mastodon_dark">#ff1a1c23</color>
+    <color name="background_ultra_dark">#ff101010</color>
+    <color name="dark_overlay">#B0101010</color>
+    <color name="notification_icon_mask">#80282c37</color>
+    <color name="header_mask">#B0181c27</color>
+    <color name="scrim">#99323232</color>
+
+    <color name="mastodon_grey">#9baec8</color>
+
+    <color name="boosted">#1e88e5</color>
+    <color name="favourited">#FFC107</color>
 </resources>
