--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,54 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tab_height">32dp</dimen>
+    <dimen name="list_item_padding">8dp</dimen>
+
+    <dimen name="spacing_normal">8dp</dimen>
+    <dimen name="spacing_mid_large">12dp</dimen>
+    <dimen name="spacing_micro">4dp</dimen>
+    <dimen name="spacing_large">32dp</dimen>
+    <dimen name="spacing_xlarge">48dp</dimen>
+    <dimen name="spacing_huge">64dp</dimen>
+    <dimen name="padding_micro">8dp</dimen>
+    <dimen name="padding_normal">16dp</dimen>
+    <dimen name="padding_large">24dp</dimen>
+
+    <dimen name="button_large">108dp</dimen>
+    <dimen name="image_attachment">80dp</dimen>
+
+    <!-- dialogs -->
+    <dimen name="padding_dialog">24dp</dimen>
+    <dimen name="dialog_title_spacing">20dp</dimen>
+
+    <dimen name="dialog_corners">2dp</dimen>
+    <dimen name="fab_size">56dp</dimen>
+
+    <dimen name="z_fab">6dp</dimen>
+    <dimen name="touch_raise">6dp</dimen>
+
+    <!-- image button -->
+    <dimen name="status_button">40dp</dimen>
+    <dimen name="status_button_padding">8dp</dimen>
+    <dimen name="image_button">48dp</dimen>
+    <dimen name="image_inner_padding">12dp</dimen>
+    <dimen name="button_elevation">2dp</dimen>
+    <dimen name="image_inner_padding_small">8dp</dimen>
+
+    <dimen name="overlay_button_small">32dp</dimen>
+    <dimen name="button_radius">4dp</dimen>
+    <dimen name="large_button_radius">8dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+
+    <!-- user detail-->
+    <dimen name="top_icon_final">32dp</dimen>
+    <dimen name="top_icon">80dp</dimen>
+
+    <dimen name="avatar_icon">48dp</dimen>
+    <dimen name="avatar_icon_mid">36dp</dimen>
+    <dimen name="avatar_icon_small">24dp</dimen>
 </resources>
