--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,12 @@
         <item name="android:windowSharedElementsUseOverlay">false</item>
     </style>
 
+    <style name="StatusActionItem">
+        <item name="android:layout_width">@dimen/status_button</item>
+        <item name="android:layout_height">@dimen/status_button</item>
+        <item name="android:padding">@dimen/status_button_padding</item>
+        <item name="android:alpha">0.8</item>
+        <item name="android:tint">@color/mastodon_grey</item>
+    </style>
+
 </resources>
