--- a/app/src/main/res/layout/list_item_followed_notification.xml
+++ b/app/src/main/res/layout/list_item_followed_notification.xml
@@ -46,6 +46,7 @@
         <ImageView
                 android:id="@+id/icon"
                 imageUrl="@{account.avatar}"
+                radius="@{8}"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_alignParentStart="true"
